--- a/Packages.tex
+++ b/Packages.tex
@@ -283,13 +283,12 @@ Zuerst sollte man allerdings die option \verb|[ht]| für here und top aligned au
 
 \section{Literaturverzeichnis}
 
-Man kann Quellen einfach zitieren und das Literaturverzeichnis wird automatisch angelegt.\\[10pt]
+Man kann Quellen einfach zitieren und das Literaturverzeichnis wird automatisch angelegt:\\[10pt]
 Um \LaTeX zu lernen empfehlen sich das Buch Latex-Begleiter \cite{LatexBegleiter} und die Wiki Seite \cite{LatexWiki}. Außerdem interessant ist die Seite zu BibTeX \cite{BibtexWiki}.\\[10pt]
 AM leichtesten geht das so:\\[10pt]
 \verb|\bibliographystyle{plain}|\\
 \verb|\bibliography{literature}|\\
 \verb|\addcontentsline{toc}{section}{Literatur}|\\[10pt]
-Man 
 
 \bibliographystyle{plain}
 \bibliography{literature}
